# hid-examples

./: stack.yaml
ch05/: filecount.hs  reader.hs  weaponsRWS.hs
containers-mini/: Bench.hs  TestDeque.hs  TestQueue.hs  TestStack.hs  containers-mini.cabal
containers-mini/Data/: Deque.hs  Queue.hs  Stack.hs
expr/rpn/: EvalRPN.hs
stockquotes/: Charts.hs  HtmlReport.hs  StatReport.hs
