cabal-version:          2.0
name:                   containers-mini
version:                0.1.0.0
build-type:             Simple

library
    exposed-modules:    Data.Stack, Data.Deque, Data.Queue
    other-extensions:  NoImplicitPrelude
    build-depends:      base >= 4.10 && <4.15, containers >= 0.5 && <0.7
    default-language:   Haskell2010

